--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements_dev.txt ]; then pip install -r requirements_dev.txt; fi
         pip install git+https://github.com/Beakerboy/MS-CFB@dev
+        pip install git+https://github.com/Beakerboy/MS-Pcode-Assembler@dev
         pip install -e .
     - name: Lint with flake8
       run: |
